# basebox-pigeos

./: .mdl-styles  AGENTS.md  BLOG-POST.md  dosbox.conf  feature-time-sync.md  meson.build  meson_options.txt  shell_history.txt  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE_fix.md
.github/workflows/: .pvs-studio.yml.disabled  analysis.yml  clang-analysis.yml  config.yml  coverity.yml  debian-docker-build.yml  debian-package.yml  deploy-website.yml  draft-release-notes.yml  linting.yml  linux.yml  macos-manual.yml  macos.yml  platforms.yml  pvs-studio.yml  raspberry-pi.yml  release.yml  windows-msvc.yml  windows-msys2.yml
contrib/icons/: Makefile  meson.build
contrib/linux/: install-icons.sh  meson.build  org.dosbox-staging.dosbox-staging.desktop  org.dosbox-staging.dosbox-staging.metainfo.xml
contrib/windows_installer/: DOSBox-Staging-setup.iss
include/: bios.h  dos_inc.h  drives.h  mouse.h  sdlmain.h
include/SDL3_net/: SDL_net.h
scripts/: get-version.sh
src/: config.h.in  dosbox.cpp
src/dos/: dev_lpt.cpp  dev_lpt.h  dos_devices.cpp  drive_local.cpp  meson.build  program_mount.cpp
src/geos/: geoshost.cpp  meson.build  tlse.c  tlse.h
src/gui/: render.cpp  render_scalers.h  sdlmain.cpp
src/hardware/: meson.build  printer.cpp  vga_s3.cpp
src/ints/: bios.cpp  int10.h  int10_modes.cpp  int10_vesa.cpp  mouse.cpp  mouse_dos_driver.cpp
src/misc/: meson.build  setup.cpp
src/sdl3-net/: SDL_net.c  meson.build
subprojects/: sdl3.wrap  slirp.wrap
tests/: localdrive_tests.cpp  lpt_tests.cpp  meson.build
vs/: dosbox.vcxproj  dosbox.vcxproj.filters
(+11 files in other folders)
